Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18570

conf-sanity test_135: failed Is changelog reader stuck

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.18.0
    • Lustre 2.17.0
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Alexander Boyko <c17825@cray.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/da9b47f3-4383-4b55-b7c2-999b8f50b93b

      test_135 failed with the following error:

      creation thread is running. Is changelog reader stuck?
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-reviews/109667 - 4.18.0-553.27.1.el8_10.x86_64
      servers: https://build.whamcloud.com/job/lustre-reviews/109667 - 4.18.0-553.27.1.el8_lustre.x86_64

      client
      00000002:00000001:0.0:1734380489.109227:0:1411203:0:(mdc_changelog.c:457:chlg_read()) Process leaving (rc=2533 : 2533 : 9e5)
      00000002:00000001:0.0:1734380489.111780:0:1411203:0:(mdc_changelog.c:407:chlg_read()) Process entered
      

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      conf-sanity test_135 - creation thread is running. Is changelog reader stuck?

            aboyko Alexander Boyko
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: