LU-18570 llog: llog_client error processing

Fixes llog_client error processing, according to llog_osd_next_block
EIO -> EBADR change.

Test-Parameters: trivial testlist=conf-sanity env=ONLY=135,ONLY_REPEAT=10
Fixes: 1a24dcdce121 ("LU-15938 lod: prevent endless retry in recovery thread")
Signed-off-by: Alexander Boyko <alexander.boyko@hpe.com>
Change-Id: Ic687b39c5c857d290d554b3077fc64f2ae6e58f4
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/64783
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Reviewed-by: Mikhail Pershin <mpershin@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>