lustre/ptlrpc/llog_client.c
@@ -162,17 +162,18 @@ static int llog_client_next_block(const struct lu_env *env,
 	ptlrpc_request_set_replen(req);
 	rc = ptlrpc_queue_wait(req);
 	/*
-	 * -EBADR has a special meaning here. If llog_osd_next_block()
+	 * -EBADR/EIO has a special meaning here. If llog_osd_next_block()
 	 * reaches the end of the log without finding the desired
 	 * record then it updates *cur_offset and *cur_idx and returns
-	 * -EBADR. In llog_process_thread() we use this to detect
+	 * -EBADR/EIO. In llog_process_thread() we use this to detect
 	 * EOF. But we must be careful to distinguish between -EBADR
 	 * coming from llog_osd_next_block() and -EBADR coming from
-	 * ptlrpc or below.
+	 * ptlrpc or below. Older servers use EIO and newer servers use EBADR.
 	 */
-	if (rc == -EBADR) {
+	if (rc == -EBADR || rc == -EIO) {
 		if (!req->rq_repmsg ||
-		    lustre_msg_get_status(req->rq_repmsg) != -EBADR)
+		    (lustre_msg_get_status(req->rq_repmsg) != -EBADR &&
+		     lustre_msg_get_status(req->rq_repmsg) != -EIO))
 			GOTO(out, rc);
 	} else if (rc < 0) {
 		GOTO(out, rc);
